--- a/bitrix/templates/main/3-0services.html
+++ b/bitrix/templates/main/3-0services.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>1-0projects-inner</title>
+	<title>3-0services</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
@@ -60,137 +60,52 @@
 		</div>
 	</div>
 	<div class="wrapper">
-		<section class="section">
-			<div class="section__head head__projects-inner">
-				<div class="head__projects-bg head-about"><img src="img/projects/projects.jpg" alt=""></div>
-				<div data-speed="5" class="lead parallax">
-					<div class="title"># about</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="task__projects">
-					<div class="product_selector product-about">
-						<div class="product_selector-item">
-							<div class="product__head">Our factory has <br>a big history</div>
-						</div>
-						<div class="product_selector-item">
-							<div class="text text-first">
-								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic</p>
-							</div>
-							<div class="text text-second">
-								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.</p>
-							</div>
-						</div>
-						<div class="product_selector-item big-text">
-							<div class="text">
-								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office. Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.  </p>
-							</div>
-						</div>
-						<div class="letters">
-							<div data-speed="15" data-direction="1" class="letters_item letters-a parallax">0</div>
-							<div data-speed="25" data-direction="1" class="letters_item letters-c parallax">9</div>
-						</div>
-					</div>
-				</div>
-				<div class="task__projects task-presents">
-					<div class="presents__head">Andrew Marchyk present</div>
-					<div class="presents__block block-text"></div>
-					<div class="presents__block block-text">Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office. Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.  </div>
-					<div class="presents__block block-img"><img data-speed="20" data-direction="1" src="/img/about/marchuk.jpg" alt="" class="parallax"></div>
-					<div data-speed="15" data-direction="1" class="presents__block block-float parallax">
-						<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. </p>
-						<p class="presents-article">Andrew marchyk, shef</p>
-					</div>
-					<div class="letters">
-						<div data-speed="15" data-direction="1" class="letters_item letters-a parallax">A</div>
-						<div data-speed="25" data-direction="1" class="letters_item letters-c parallax">C</div>
-						<div data-speed="40" data-direction="1" class="letters_item letters-y parallax">Y</div>
-						<div data-speed="15" data-direction="1" class="letters_item letters-m parallax">M</div>
-						<div data-speed="25" data-direction="1" class="letters_item letters-r parallax">‘‘</div>
-						<div data-speed="30" data-direction="1" class="letters_item letters-k parallax">K</div>
-						<div data-speed="40" data-direction="1" class="letters_item letters-1 parallax">1</div>
-						<div data-speed="15" data-direction="1" class="letters_item letters-7 parallax">7</div>
-					</div>
-				</div>
-				<section class="section kredo">
-					<div class="container container__kredo">
-						<div class="task__kredo">
-							<div class="task__kredo-photo"><img data-speed="20" data-direction="1" src="/img/projects/kredo.jpg" alt="" class="parallax"></div>
-							<div data-speed="15" data-direction="1" class="task__kredo-text parallax">We make a good<br>job and love our<br>work so much</div>
-						</div>
-					</div>
-					<div class="letters">
-						<div data-speed="15" data-direction="1" class="letters_item letters-s parallax">S</div>
-						<div data-speed="25" data-direction="1" class="letters_item letters-p parallax">P</div>
-						<div data-speed="40" data-direction="1" class="letters_item letters-e parallax">E</div>
-					</div>
-				</section>
-				<div data-speed="15" data-direction="1" class="task__projects parallax">
-					<div class="presents__head presents-partners">We working with</div>
-					<div class="presents__carousel">
-						<div class="presents__wrapper">
-							<div class="presents__slide active">
-								<!--оборачивать в ссылки?-->
-								<div class="slide_item"><img src="img/about/part1.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part5.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part4.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part3.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part2.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part5.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part6.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part2.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part1.png" alt=""></div>
-								<div class="slide_item"><img src="img/about/part3.png" alt=""></div>
-							</div>
-						</div>
-						<div class="presents__next">
-							<button class="carousel_layout-next">
-								<div class="icon">
-									<svg viewbox="0 0 104 116" xmlns="http://www.w3.org/2000/svg">
-										<path d="m60.511,84.536c-0.386,1.035 0.14,2.187 1.175,2.573l16.745,6.248c-7.854,5.62 -17.1,8.59399 -26.804,8.59399c-25.435,0 -46.127,-20.69299 -46.127,-46.12799c0,-1.104 -0.896,-2 -2,-2s-2,0.896 -2,2c0,27.64 22.487,50.12799 50.127,50.12799c9.725,0 19.026,-2.75 27.111,-7.966l-3.087,14.551c-0.229,1.07999 0.461,2.142 1.541,2.37099c0.14,0.03 0.279,0.044 0.417,0.044c0.925,0 1.755,-0.645 1.954,-1.586l4.68999,-22.105l-21.17,-7.898c-1.032,-0.385 -2.185,0.139 -2.572,1.174zm-8.136,-74.214c-9.728,0 -19.03,2.749 -27.11,7.963l3.086,-14.548c0.229,-1.081 -0.46,-2.142 -1.541,-2.371c-1.077,-0.229 -2.143,0.461 -2.371,1.542l-4.69,22.104l21.17,7.898c0.23,0.086 0.467,0.127 0.699,0.127c0.811,0 1.573,-0.498 1.874,-1.302c0.386,-1.034 -0.14,-2.187 -1.175,-2.573l-16.747,-6.25c7.85,-5.618 17.097,-8.591 26.806,-8.591c25.434,0 46.125,20.691 46.125,46.125c0,1.104 0.896,2 2,2s2,-0.896 2,-2c-0.001,-27.638 -22.487,-50.124 -50.126,-50.124z"></path>
-									</svg>
-								</div>
-							</button>
-						</div>
-					</div>
-				</div>
-				<!--видео по желанию <video autoplay loop></video>-->
-				<div data-speed="15" data-direction="1" class="task__projects parallax">
-					<div class="product_selector">
-						<div data-speed="10" data-direction="-1" class="product_selector-photo photo_right parallax"><img src="/img/projects/here.jpg" alt="">
-							<p class="text">Two days before the release</p>
-						</div>
-						<div data-speed="10" data-direction="1" class="product_selector-photo photo_left parallax"><img data-speed="10" data-direction="1" src="/img/projects/half.jpg" alt="" class="parallax">
-							<p data-speed="5" data-direction="1" class="text parallax">Two days before the release, Uli Sigg and director Michael Schindhelm attended</p>
-						</div>
-					</div>
-				</div>
-				<div data-speed="5" data-direction="1" class="task__projects parallax">
-					<div class="product_selector">
-						<div class="product_selector-photo photo_center"><img data-speed="15" data-direction="1" src="/img/projects/photo_3.jpg" alt="" class="parallax">
-							<p data-speed="15" data-direction="1" class="text parallax">Two days before the release</p>
-						</div>
-					</div>
-				</div>
-				<div class="letters">
-					<div data-direction="1" class="letters_item letters-r parallax">R</div>
-					<div data-speed="25" data-direction="1" class="letters_item letters-i parallax">I</div>
-					<div data-direction="1" class="letters_item letters-g parallax">G</div>
-					<div data-direction="1" class="letters_item letters-t parallax">T</div>
-				</div>
+		<section class="section section_services services-inner">
+			<div data-speed="15" class="lead parallax">
+				<div class="title"># services</div>
 			</div>
 		</section>
-		<section class="section section__links"><a href="#" data-speed="15" class="links parallax">
-				<div class="section_container">
-					<div class="topper">you can see</div>
-					<div class="middle">
-						<div style="background-image: url('../img/mask.jpg')" class="text">see projects</div>
-						<div class="arrow">
-							<div style="background-image: url('../img/icons/arrow.png')" class="icon"></div>
+		<div class="container">
+			<div class="task__projects">
+				<div class="service__wrapper">
+					<div class="item__wrapper item__left">
+						<div class="service__item"><img src="img/srvices/service.jpg " alt="">
+							<p class="service__text">Mounting</p>
+							<div class="service__link">
+								<div class="link_case"><a data-speed="15" href="#" class="link-dash parallax">+view more</a></div>
+							</div>
 						</div>
 					</div>
-				</div></a></section>
+					<div class="item__wrapper item__center">
+						<div class="service__item"><img src="img/srvices/service.jpg " alt="">
+							<p class="service__text">Manufacturing<br>of furniture to order</p>
+							<div class="service__link">
+								<div class="link_case"><a data-speed="15" href="#" class="link-dash parallax">+view more</a></div>
+							</div>
+						</div>
+					</div>
+					<div class="item__wrapper item__right">
+						<div class="service__item"><img src="img/srvices/service.jpg " alt="">
+							<p class="service__text">Interior design</p>
+							<div class="service__link">
+								<div class="link_case"><a data-speed="15" href="#" class="link-dash parallax">+view more</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+	<section class="section section__links"><a href="#" data-speed="15" class="links parallax">
+			<div class="section_container">
+				<div class="topper">you can see</div>
+				<div class="middle">
+					<div style="background-image: url('../img/mask.jpg')" class="text">see portfolio</div>
+					<div class="arrow">
+						<div style="background-image: url('../img/icons/arrow.png')" class="icon"></div>
+					</div>
+				</div>
+			</div></a></section>
 	<footer class="footer">
 		<div class="mapping">
 			<div data-speed="20" class="block-address parallax">
