--- a/src/jade/2-0about.jade
+++ b/src/jade/2-0about.jade
@@ -38,6 +38,9 @@ head
               .text
                 p
                   |Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office. Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.  
+            .letters
+                .letters_item.letters-a.parallax(data-speed='15',data-direction='1') 0
+                .letters_item.letters-c.parallax(data-speed='25',data-direction='1') 9
         .task__projects.task-presents
           .presents__head
             |Andrew Marchyk present
@@ -48,6 +51,15 @@ head
           .presents__block.block-float.parallax(data-speed='15',data-direction='1')
             p Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. 
             p.presents-article Andrew marchyk, shef
+          .letters
+              .letters_item.letters-a.parallax(data-speed='15',data-direction='1') A
+              .letters_item.letters-c.parallax(data-speed='25',data-direction='1') C
+              .letters_item.letters-y.parallax(data-speed='40',data-direction='1') Y
+              .letters_item.letters-m.parallax(data-speed='15',data-direction='1') M
+              .letters_item.letters-r.parallax(data-speed='25',data-direction='1') ‘‘
+              .letters_item.letters-k.parallax(data-speed='30',data-direction='1') K
+              .letters_item.letters-1.parallax(data-speed='40',data-direction='1') 1
+              .letters_item.letters-7.parallax(data-speed='15',data-direction='1') 7
         section.section.kredo
           .container.container__kredo
             .task__kredo
@@ -89,48 +101,6 @@ head
                   img(src="img/about/part1.png", alt="")
                 .slide_item
                   img(src="img/about/part3.png", alt="")
-              .presents__slide
-                .slide_item
-                  img(src="img/about/part4.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part5.png", alt="")
-                .slide_item
-                  img(src="img/about/part2.png", alt="")
-                .slide_item
-                  img(src="img/about/part3.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part2.png", alt="")
-                .slide_item
-                  img(src="img/about/part6.png", alt="")
-                .slide_item
-                  img(src="img/about/part4.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-              .presents__slide
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
-                .slide_item
-                  img(src="img/about/part1.png", alt="")
             .presents__next
                 button.carousel_layout-next
                   .icon
@@ -153,7 +123,11 @@ head
             .product_selector-photo.photo_center
               img.parallax(data-speed='15',data-direction='1',src="/img/projects/photo_3.jpg", alt="")
               p.text.parallax(data-speed='15',data-direction='1') Two days before the release
-
+        .letters
+          .letters_item.letters-r.parallax(data-direction='1') R
+          .letters_item.letters-i.parallax(data-speed='25',data-direction='1') I
+          .letters_item.letters-g.parallax(data-direction='1') G
+          .letters_item.letters-t.parallax(data-direction='1') T
     section.section.section__links
       a.links.parallax(href='#', data-speed='15')
         .section_container
