--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -39,17 +39,17 @@ html
               div
                 .sq-carousel-item.active
                   .shader
-                    a.link-shader(href='2-0about.html')
+                    a.link-shader(href='3-1services-inner.html')
                       | Penthouse Minsk1 
                       span 2015
                 .sq-carousel-item
                   .shader
-                    a.link-shader(href='1-0projects-inner.html')
+                    a.link-shader(href='4-0designers.html')
                       | Penthouse Minsk2 
                       span 2015
                 .sq-carousel-item
                   .shader
-                    a.link-shader(href='')
+                    a.link-shader(href='1-0projects-inner')
                       | Penthouse Minsk3 
                       span 2015
                 .sq-carousel-item
