--- a/src/jade/1-0projects.jade
+++ b/src/jade/1-0projects.jade
@@ -34,6 +34,7 @@ head
             .project__grid
               .projects-col.interior.parallax(data-speed='15')
                 a.project__item.pos-bottom(href='')
+                   span.counter 54.
                   .project__media
                     img.parallax(src='img/projects/small.jpg', alt='', data-speed='15', data-direction='-1')
                   .project__name
