--- a/src/jade/4-0designers.jade
+++ b/src/jade/4-0designers.jade
@@ -33,8 +33,83 @@ head
               .text
                 p
                   |Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.
-        .task__projects.task-designers
-         
+        .projects
+          .projects__container
+            .project__grid.project__grid-designers
+              .projects-col.parallax(data-speed='10', data-direction='1')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 54.
+                  .project__media
+                    img.parallax(src='img/designer/howard.jpg', alt='',data-speed='10', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category interior design
+              .projects-col.parallax(data-speed='25')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 54.
+                  .project__media
+                    img.parallax(src='img/designer/designer2.jpg', alt='', data-speed='15', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category interior design
+              .projects-col.parallax(data-speed='15')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 54.
+                  .project__media
+                    img.parallax(src='img/designer/howard.jpg', alt='', data-speed='15', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category design design
+              .projects-col.parallax(data-speed='25')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 54.
+                  .project__media
+                    img.parallax(src='img/projects/small.jpg', alt='', data-speed='15', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category interior design
+            
+            .project__grid.project__grid-designers
+              .projects-col.parallax(data-speed='10', data-direction='1')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 04.
+                  .project__media
+                    img.parallax(src='img/designer/howard.jpg', alt='',data-speed='10', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category interior design
+              .projects-col.parallax(data-speed='25')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 57.
+                  .project__media
+                    img.parallax(src='img/designer/designer2.jpg', alt='', data-speed='15', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category interior design
+              .projects-col.parallax(data-speed='15')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 54.
+                  .project__media
+                    img.parallax(src='img/designer/howard.jpg', alt='', data-speed='15', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category design design
+              .projects-col.parallax(data-speed='25')
+                a.project__item(href='')
+                  span.counter.parallax(data-speed='25', data-direction='-1') 54.
+                  .project__media
+                    img.parallax(src='img/projects/small.jpg', alt='', data-speed='15', data-direction='-1')
+                  .project__name
+                    .name
+                      span Dasha Chernaia
+                    .category interior design
     section.section.section__links
       a.links.parallax(href='#', data-speed='15')
         .section_container
