--- a/bitrix/templates/main/4-0designers.html
+++ b/bitrix/templates/main/4-0designers.html
@@ -85,7 +85,62 @@
 						</div>
 					</div>
 				</div>
-				<div class="task__projects task-designers"></div>
+				<div class="projects">
+					<div class="projects__container">
+						<div class="project__grid project__grid-designers">
+							<div data-speed="10" data-direction="1" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
+									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="10" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">interior design</div>
+									</div></a></div>
+							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
+									<div class="project__media"><img src="img/designer/designer2.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">interior design</div>
+									</div></a></div>
+							<div data-speed="15" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
+									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">design design</div>
+									</div></a></div>
+							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
+									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">interior design</div>
+									</div></a></div>
+						</div>
+						<div class="project__grid project__grid-designers">
+							<div data-speed="10" data-direction="1" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">04.</span>
+									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="10" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">interior design</div>
+									</div></a></div>
+							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">57.</span>
+									<div class="project__media"><img src="img/designer/designer2.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">interior design</div>
+									</div></a></div>
+							<div data-speed="15" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
+									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">design design</div>
+									</div></a></div>
+							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
+									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>Dasha Chernaia</span></div>
+										<div class="category">interior design</div>
+									</div></a></div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section class="section section__links"><a href="#" data-speed="15" class="links parallax">
