--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -39,7 +39,7 @@ html
               div
                 .sq-carousel-item.active
                   .shader
-                    a.link-shader(href='3-1services-inner.html')
+                    a.link-shader(href='4-1designers.html')
                       | Penthouse Minsk1 
                       span 2015
                 .sq-carousel-item
@@ -54,7 +54,7 @@ html
                       span 2015
                 .sq-carousel-item
                   .shader
-                    a.link-shader(href='')
+                    a.link-shader(href='3-1services-inner.html')
                       | Penthouse Minsk4 
                       span 2015
             .sq-carousel-navi
